--- a/index.ipynb
+++ b/index.ipynb
@@ -237,12 +237,24 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Toronto', 'Country': 'Canada', 'Population': 2732, 'Area': 630}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas\n",
     "file_name = './cities.xlsx'\n",
     "travel_df = pandas.read_excel(file_name)\n",
-    "cities = travel_df.to_dict('records')\n"
+    "cities = travel_df.to_dict('records')\n",
+    "cities[1]"
    ]
   },
   {
