--- a/index.ipynb
+++ b/index.ipynb
@@ -235,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Toronto', 'Country': 'Canada', 'Population': 2732, 'Area': 630}"
+       "{'City': 'Albuquerque', 'Country': 'USA', 'Population': 559, 'Area': 491}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
     "file_name = './cities.xlsx'\n",
     "travel_df = pandas.read_excel(file_name)\n",
     "cities = travel_df.to_dict('records')\n",
-    "Country[]"
+    "cities[3]"
    ]
   },
   {
