Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,18 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'City': 'Albuquerque', 'Country': 'USA', 'Population': 559, 'Area': 491}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-889344c75a20>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-889344c75a20>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    cities[0]{1}\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -254,7 +252,7 @@
     "file_name = './cities.xlsx'\n",
     "travel_df = pandas.read_excel(file_name)\n",
     "cities = travel_df.to_dict('records')\n",
-    "cities[0]{}"
+    "cities[0,"
    ]
   },
   {
